Ecommerce_payment_service/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: payments
  labels:
    app.kubernetes.io/name: payments
    environment: dev
