Ecommerce_payment_service/k8s/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: payments
spec:
  selector:
    app: mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: payments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
            - name: ddl
              mountPath: /docker-entrypoint-initdb.d/init.sql
              subPath: init.sql
          readinessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 6
          livenessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
      volumes:
        - name: ddl
          configMap:
            name: mysql-ddl
            items:
              - key: ddl.sql
                path: init.sql
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-pvc
